syntax="proto3";

import "course/user-srv/proto/dto/user.proto";
import "course/proto/basic/basic.proto";
import "course/user-srv/proto/dto/resource.proto";
package user;

option go_package="course/user-srv/proto/user";

service UserService{
  //----------- 用户接口 -------------
  rpc List(PageDto) returns (PageDto){}
  rpc Save(UserDto) returns (UserDto){}
  rpc Delete(basic.String) returns (basic.String){}
  rpc SavePassword(UserDto) returns (UserDto){}
  rpc Login(UserDto) returns (LoginUserDto){}
  rpc Logout(basic.String) returns (basic.String){}
  rpc UserInfo(basic.String) returns (UserDto){}

  //---------- 权限管理 ---------------
  //resource
  rpc LoadMenus(basic.String) returns (ResourceDtoList);
  rpc LoadTree(basic.String) returns (ResourceDtoList);
  rpc SaveJson(basic.String) returns (basic.String);
  rpc DeleteResource(basic.Integer) returns (basic.String);
  //role
  rpc RoleList(RolePageDto) returns (RolePageDto);
  rpc SaveRole(RoleDto) returns (RoleDto);
  rpc DeleteRole(basic.String) returns (basic.String);
  rpc SaveRoleResource(RoleDto) returns (RoleDto);
  rpc ListRoleResource(basic.String) returns (basic.StringList);
  rpc SaveRoleUser(RoleDto) returns (RoleDto);
  rpc ListRoleUser(basic.String) returns (basic.StringList);
}

message UserDto{
  string id = 1;
  string name = 2;
  string login_name = 3;
  string password = 4;
}

message PageDto{
  int64 pageSize = 1;
  int64 pageNum = 2;
  string sortBy = 3;
  bool asc = 4;
  repeated UserDto users = 5;
}